Updates server to support custom collection number and collection window arguments
